# object-detection-tensorflow-api

./: .gitignore  README.md  pyproject.toml
dataset/training/annotations/: label_map.pbtxt
dataset/training/annotations/csv/: eval.csv  train.csv
dataset/training/annotations/xml/eval/: PXL_20210618_075851469.xml  PXL_20210618_075933814.xml  PXL_20210618_075944092.xml  PXL_20210618_075947194.xml  PXL_20210618_080051177.xml  PXL_20210618_080107101.xml  PXL_20210618_080109782.xml  PXL_20210618_080113209.MP.xml  PXL_20210618_080218085.xml  PXL_20210618_080308005.xml  PXL_20210618_080313845.xml  PXL_20210618_080321430.MP.xml  PXL_20210618_080323423.MP.xml  PXL_20210618_080433894.xml  PXL_20210618_080438870.xml  PXL_20210618_080441347.xml  PXL_20210618_080503713.xml
dataset/training/annotations/xml/train/: PXL_20210618_075810882.xml  PXL_20210618_075816720.xml  PXL_20210618_075820616.xml  PXL_20210618_075824603.xml  PXL_20210618_075827625.xml  PXL_20210618_075831968.xml  PXL_20210618_075837013.xml  PXL_20210618_075842425.xml  PXL_20210618_075846586.xml  PXL_20210618_075849276.xml  PXL_20210618_075853562.xml  PXL_20210618_075855867.xml  PXL_20210618_075900333.xml  PXL_20210618_075902857.xml  PXL_20210618_075905284.MP.xml  PXL_20210618_075907062.MP.xml  PXL_20210618_075919168.xml  (+47 more)
models/research/object_detection/: .gitignore
object_detection_notebooks/object_detection_api_test/: object_detection_api_test.ipynb
scripts/: generate_pbtxt.py  generate_tfrecord.py  generate_tfrecord_tf2.py  model_main.py  model_main_tf2.py  split_csv.py  xml_to_csv.py
